<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">mdedu</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="my_courses">我的课程</string>
    <string name="add_course">添加课程</string>
    
    <!-- content desc -->
    <string name="cd_check_status">Check Status</string>
    <string name="home">首页</string>
	<string name="mycache">我的缓存</string>
	<string name="playhis">播放历史</string>
	<string name="practice">课后练习</string>
	<string name="setting">程序设置</string>
	<string name="remove">删除</string>
	<string name="loading">正在努力加载数据中……</string>
	<string name="home.course">初中课程\nJunior Course</string>
	
	<string name="time_used">用时：</string>
	<string name="submit_date">提交时间：</string>
	<string name="total_correct">总数/正确：</string>
	<string name="attemp_record">答题记录</string>
	
	<string name="action_download_all">下载全部视频</string>
	<string name="action_delete_all">删除所有视频</string>
</resources>
