<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" 
	android:padding="4dp"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/course_image"
           android:layout_width="60dp"
    	android:layout_height="75dp" />

        <ImageView
            android:id="@+id/checked_status"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:contentDescription="@string/cd_check_status"
            android:padding="4dp"
            android:src="@drawable/checkmark_unchecked" />

        <TextView
            android:id="@+id/course_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/course_image"
            android:layout_toLeftOf="@id/checked_status"
            android:layout_toRightOf="@+id/course_image"
            android:layout_toStartOf="@id/checked_status"
            android:text="@string/app_name"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/course_grade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/course_name"
            android:layout_toEndOf="@+id/course_image"
            android:layout_toLeftOf="@id/checked_status"
            android:layout_toRightOf="@+id/course_image"
            android:layout_toStartOf="@id/checked_status"
            android:text="@string/app_name"
            android:textSize="16sp" />
        <TextView
            android:id="@+id/coures_publisher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/course_grade"
            android:layout_toEndOf="@+id/course_grade"
            android:layout_toLeftOf="@id/checked_status"
            android:layout_toRightOf="@+id/course_image"
            android:layout_toStartOf="@id/checked_status"
            android:text="@string/app_name"
            android:textSize="16sp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/layout2"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_red_light" >

        <TextView
            android:id="@+id/delete_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/remove"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>